--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tristan-remple/util"
+    "url": "git+https://github.com/tristan-remple/util.git"
   },
   "license": "ISC",
   "type": "module"
